5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1800_2563.log
== TEST (2019-06-06 10:45:20) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))

while(size(v)>1):
	for p in vet
		if(p>=5 and p<7):
			print(vet)
vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 5
    for p in vet
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:45:51) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))

while(size(v)>1):
	for p in vet:
		if(p>=5 and p<7):
			print(vet)
vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:46:12) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))

while(size(vet)>1):
	for p in vet:
		if(p>=5 and p<7):
			print(vet)
vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:47:29) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))

while(size(vet)>1):
	for p in vet:
		if(p>=5 and p<7):
			print(p)
vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:49:29) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))

while(size(vet)>1):
	for p in vet:
		if(p>7):
			print(p)
vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:52:25) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))
i = 0
while(size(vet)>1):
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
			print(i)
			
vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:00:49) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))
i = 0
while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:00:57) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))
i = 0
while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:00:59) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))
i = 0
while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- EXECUTION TIME:
0.032582
-- ERROR:
Error response from daemon: Container 646b9775252f9ee73350960e8b4c2715697b7d002346e57cedf050208ce54303 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:01:01) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))
i = 0
while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:01:18) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))
i = 0
while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:02:33) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))
i = 0
while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- EXECUTION TIME:
0.0317001
-- ERROR:
Error response from daemon: Container 646b9775252f9ee73350960e8b4c2715697b7d002346e57cedf050208ce54303 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:02:35) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))
i = 0
while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:03:13) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))
i = 0
while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
	vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- EXECUTION TIME:
0.0289249
-- ERROR:
Error response from daemon: Container 646b9775252f9ee73350960e8b4c2715697b7d002346e57cedf050208ce54303 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:03:17) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))
i = 0
while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
	vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:03:20) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))
i = 0
while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
	vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- EXECUTION TIME:
0.0294192
-- ERROR:
Error response from daemon: Container 646b9775252f9ee73350960e8b4c2715697b7d002346e57cedf050208ce54303 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:03:44) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))

while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
	vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- EXECUTION TIME:
0.021961
-- ERROR:
Error response from daemon: Container 646b9775252f9ee73350960e8b4c2715697b7d002346e57cedf050208ce54303 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:03:47) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))

while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
	vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- EXECUTION TIME:
0.0292351
-- ERROR:
Error response from daemon: Container 646b9775252f9ee73350960e8b4c2715697b7d002346e57cedf050208ce54303 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:04:02) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))

while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
	vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:04:05) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))

while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
	vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- EXECUTION TIME:
0.0295422
-- ERROR:
Error response from daemon: Container 646b9775252f9ee73350960e8b4c2715697b7d002346e57cedf050208ce54303 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:04:06) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))

while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
	vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:04:46) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))

while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
	vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:07:09) 
-- CODE:
from numpy import*
vet = array(eval(input("v: ")))

while(size(vet)>1):
	i = 0
	for p in vet:
		if(p >= 5 and p<7):
			i = i + 1
	print(i)
			
	vet = array(eval(input("v: ")))
		
	
	
	
	
	
	
-- EXECUTION TIME:
0.764715
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
